--- a/Autenticacao_seguranca/testes_unitarios_integracao/package.json
+++ b/Autenticacao_seguranca/testes_unitarios_integracao/package.json
@@ -4,7 +4,7 @@
   "description": "Testes de integração e unitário usando nodejs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "author": "Gabriel Roquim",
   "license": "ISC",
@@ -12,5 +12,9 @@
     "eslint": "^8.40.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5"
-  }
+  },
+  "dependencies": {
+    "jest": "^29.5.0"
+  },
+  "type": "module"
 }
