--- a/Autenticacao_seguranca/testes_unitarios_integracao/package.json
+++ b/Autenticacao_seguranca/testes_unitarios_integracao/package.json
@@ -4,7 +4,9 @@
   "description": "Testes de integração e unitário usando nodejs",
   "main": "index.js",
   "scripts": {
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
+    "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch --coverage"
   },
   "author": "Gabriel Roquim",
   "license": "ISC",
